--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -31,7 +31,7 @@
                 </td>
                 <td><button th:onClick="|location.href='@{/chanMarket/chat/{roomId}(roomId=${myChat.id})}'|" type="button">채팅하기</button></td>
 
-                <td><button><a href="javascript:void(0);" class="btn btn-danger" th:onclick="'deleteChatRoom(' + ${myChat.id} ','+ ${memberId} + ')'">나가기</a></button></td>
+                <td><button><a href="javascript:void(0);" class="btn btn-danger" th:onclick="'deleteChatRoom(' + ${myChat.id} +','+ ${memberId} + ')'">나가기</a></button></td>
             </tr>
             </tbody>
         </table>
