--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="card-body p-4 p-sm-5">
                     <h5 class="card-title text-center mb-5 fw-light fs-5">회원가입</h5>
-                    <form th:action="@{'/chanMarket'}" th:method="post">
+                    <form th:action="@{'/chanMarket/join'}" th:method="post">
                         <form>
 
                             <div class="form-floating mb-3">
