--- a/src/main/resources/templates/board/boardInfo.html
+++ b/src/main/resources/templates/board/boardInfo.html
@@ -109,7 +109,7 @@
 </form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="../../static/market/js/boardDel.js"> </script>
-<script type="text/javascript" src="../../market/js/comment.js"> </script>
+<script type="text/javascript" src="/js/boardDel.js"> </script>
+<script type="text/javascript" src="/js/comment.js"> </script>
 </body>
 </html>
