--- a/src/main/resources/templates/basket/myBasket.html
+++ b/src/main/resources/templates/basket/myBasket.html
@@ -35,6 +35,6 @@
 </form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="../../market/js/baskItemDel.js"> </script>
+<script type="text/javascript" src="/js/baskItemDel.js"> </script>
 </body>
 </html>
