--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -42,6 +42,6 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="../../../market/js/chatDel.js"></script>
+<script type="text/javascript" src="/js/chatDel.js"></script>
 </body>
 </html>
