--- a/src/main/resources/templates/item/deleteForm.html
+++ b/src/main/resources/templates/item/deleteForm.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link href="../../static/market/css/bootstrap.min.css"
-          th:href="@{/market/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="../../static/css/bootstrap.min.css"
+          th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <style>
         .container {
             max-width: 560px;
