--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -17,38 +17,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-    <style id="compiled-css" type="text/css">
-        body {
-            background: #007bff;
-            background: linear-gradient(to right, #0062E6, #33AEFF);
-        }
-
-        .card-img-left {
-            width: 45%;
-            /* Link to your background image using in the property below! */
-            background: scroll center url('https://source.unsplash.com/WEQbe2jBg40/414x512');
-            background-size: cover;
-        }
-
-        .btn-login {
-            font-size: 0.9rem;
-            letter-spacing: 0.05rem;
-            padding: 0.75rem 1rem;
-        }
-
-        .btn-google {
-            color: white !important;
-            background-color: #ea4335;
-        }
-
-        .btn-facebook {
-            color: white !important;
-            background-color: #3b5998;
-        }
-
-
-        /* EOS */
-    </style>
+    <link rel="stylesheet" href="/css/join.css">
     <script id="insert"></script>
 </head>
 
@@ -98,24 +67,13 @@
                                 <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase"  type="submit" value="Register">Register</button>
                             </div>
 
-                            <a class="d-block text-center mt-2 small" href="#">Have an account? Sign In</a>
+                            <a class="d-block text-center mt-2 small" href="/chanMarket/login">Have an account? Sign In</a>
 
-                            <hr class="my-4">
 
-                            <div class="d-grid mb-2">
-                                <button class="btn btn-lg btn-google btn-login fw-bold text-uppercase" type="submit">
-                                    <i class="fab fa-google me-2"></i> Sign up with Google
-                                </button>
-                            </div>
-
-                            <div class="d-grid">
-                                <button class="btn btn-lg btn-facebook btn-login fw-bold text-uppercase" type="submit">
-                                    <i class="fab fa-facebook-f me-2"></i> Sign up with Facebook
-                                </button>
-                            </div>
 
                         </form>
 
+                    </form>
                 </div>
             </div>
         </div>
