--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,19 +1,75 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Join</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="googlebot" content="noindex, nofollow">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>로그인</title>
+    <script
+            type="text/javascript"
+            src="/js/lib/dummy.js"
+    ></script>
+    <link rel="stylesheet" type="text/css" href="/css/result-light.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/login.css">
+    <script id="insert"></script>
 </head>
+
 <body>
-로그인
+<div class="container">
+    <div class="row">
+        <div class="col-lg-10 col-xl-9 mx-auto">
+            <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">
+                <div class="card-img-left d-none d-md-flex">
+                    <!-- Background image for card set in CSS! -->
+                </div>
+                <div class="card-body p-4 p-sm-5">
+                    <h5 class="card-title text-center mb-5 fw-light fs-5">로그인</h5>
+                    <form th:action="@{'/chanMarket/login'}" th:method="post">
+                        <form>
+                            <div class="form-floating mb-3">
+                                <input type="email" name="email" class="form-control" id="email" placeholder="Email" required autofocus>
+                                <label for="email">Email</label>
+                            </div>
 
-<form th:action="@{'/chanMarket/login'}" th:method="post">
-    ID :<input type="email" name="email"><br>
-    PASSWORD :<input type="text" name="pw"><br>
-    <button type="submit">로그인</button>
+                            <div class="form-floating mb-3">
+                                <input type="password" name="pw" class="form-control" id="pw" placeholder="Password" required autofocus>
+                                <label for="pw">Password</label>
+                            </div>
 
-</form>
+                            <div class="d-grid mb-2">
+                                <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase"  type="submit" value="Login">Login</button>
+                            </div>
+
+                            <a class="d-block text-center mt-2 small" href="/chanMarket/join">Don't have an account? Sign Up</a>
+
+                            <hr class="my-4">
+
+                            <div class="d-grid mb-2">
+                                <button class="btn btn-lg btn-google btn-login fw-bold text-uppercase" type="submit">
+                                    <i class="fab fa-google me-2"></i> Sign up with Google
+                                </button>
+                            </div>
+
+                            <div class="d-grid">
+                                <button class="btn btn-lg btn-facebook btn-login fw-bold text-uppercase" type="submit">
+                                    <i class="fab fa-facebook-f me-2"></i> Sign up with Facebook
+                                </button>
+                            </div>
+
+                        </form>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
