--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -56,13 +56,13 @@
                                 <label for="tel">Tel</label>
                             </div>
 
-
                             <!--
                             <div class="form-floating mb-3">
                                 <input type="password" class="form-control" id="floatingPasswordConfirm" placeholder="Confirm Password" required autofocus>
                                 <label for="floatingPasswordConfirm">Confirm Password</label>
-                            </div>
                             -->
+                                <hr class="my-4">
+
                             <div class="d-grid mb-2">
                                 <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase"  type="submit" value="Register">Register</button>
                             </div>
