--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -8,31 +8,54 @@
     <div class="py-5 text-center">
         <h2>상품 목록</h2>
     </div>
+
     <div class="row">
         <div class="col">
             <button class="btn btn-primary float-end"
+                    th:if="${session.loginMember == null}"
+                    th:onclick="|location.href='@{/chanMarket/join}'|"
+                    type="button">회원 가입</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end"
+                    th:if="${session.loginMember == null}"
+                    th:onclick="|location.href='@{/chanMarket/login}'|"
+                    type="button">로그인</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end"
+                    th:if="${session.loginMember != null}"
                     onclick="location.href='addForm.html'"
                     th:onclick="|location.href='@{/chanMarket/item/add}'|"
                     type="button">상품 등록</button>
         </div>
     </div>
-</div>
 
-<div class="row">
-    <div class="col">
-        <button class="btn btn-primary float-end"
-                onclick="location.href='myInfo.html'"
-                th:onclick="|location.href='@{/chanMarket/myInfo}'|"
-                type="button">내 정보</button>
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end"
+                    th:if="${session.loginMember != null}"
+                    onclick="location.href='myInfo.html'"
+                    th:onclick="|location.href='@{/chanMarket/myInfo}'|"
+                    type="button">내 정보</button>
+        </div>
     </div>
-</div>
 
-<form th:action="@{'/chanMarket/board'}" th:method="post">
-    <div class="col">
-        <button class="w-100 btn btn-primary btn-lg" type="submit" value="Update">로그아웃
-        </button>
-    </div>
-</form>
+    <form th:action="@{'/chanMarket/board'}" th:method="post">
+        <div class="col">
+            <button class="w-100 btn btn-primary btn-lg"
+                    th:if="${session.loginMember != null}"
+                    type="submit" value="Update">로그아웃
+            </button>
+        </div>
+    </form>
+</div>
 
 <form th:action="@{'/chanMarket/board'}" th:method="get">
     <hr class="my-4">
