--- a/src/main/resources/templates/member/editForm.html
+++ b/src/main/resources/templates/member/editForm.html
@@ -39,7 +39,7 @@
         <div>
             <label for="grade">내 등급</label>
             <input type="text" id="grade" name="grade" class="form-control"
-                   th:value="${myInfo.grade}" readonly>
+                   th:value="${myInfo.getRole}" readonly>
         </div>
         <hr class="my-4">
         <div class="row">
