--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -52,7 +52,9 @@
                             <hr class="my-4">
 
                             <div class="d-grid mb-2">
-                                <button class="btn btn-lg btn-google btn-login fw-bold text-uppercase" type="submit">
+                                <button class="btn btn-lg btn-google btn-login fw-bold text-uppercase"
+                                        th:onclick="|location.href='@{/oauth2/authorization/google}'|"
+                                        type="button">
                                     <i class="fab fa-google me-2"></i> Sign up with Google
                                 </button>
                             </div>
