--- a/src/main/resources/templates/member/myInfo.html
+++ b/src/main/resources/templates/member/myInfo.html
@@ -28,7 +28,7 @@
         <div>
             <label for="grade">내 등급</label>
             <input type="text" id="grade" name="grade" class="form-control" value="ddd"
-                   th:value="${myInfo.getGrade()}" readonly>
+                   th:value="${myInfo.getRole()}" readonly>
         </div>
 
         <br>
