--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -1,87 +1,104 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-</head>
-<body>
-<div class="container" style="max-width: 600px">
-    <div class="py-5 text-center">
-        <h2>상품 목록</h2>
-    </div>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>ChanMarket</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+        <!-- Bootstrap icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="/css/styles.css" rel="stylesheet" />
+    </head>
+    <body>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" th:href="@{/chanMarket/board}">ChanMarket</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                        <li class="nav-item"><a class="nav-link active" th:if="${session.loginMember == null && session.googleLogin == null}" aria-current="page" th:href="@{/chanMarket/join}">Join</a></li>
+                        <li class="nav-item"><a class="nav-link" th:if="${session.loginMember == null && session.googleLogin == null}" th:href="@{/chanMarket/login}">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/myInfo}">myInfo</a></li>
 
-    <div class="row">
-        <div class="col">
-            <button class="btn btn-primary float-end"
-                    th:if="${session.loginMember == null}"
-                    th:onclick="|location.href='@{/chanMarket/join}'|"
-                    type="button">회원 가입</button>
-        </div>
-    </div>
+                        <form th:action="@{'/chanMarket/board'}" th:method="post">
+                            <li class="nav-item"><button class="nav-link" th:if="${session.loginMember != null || session.googleLogin != null}" type="submit">LogOut</button></li>
+                        </form>
 
-    <div class="row">
-        <div class="col">
-            <button class="btn btn-primary float-end"
-                    th:if="${session.loginMember == null}"
-                    th:onclick="|location.href='@{/chanMarket/login}'|"
-                    type="button">로그인</button>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col">
-            <button class="btn btn-primary float-end"
-                    th:if="${session.loginMember != null}"
-                    onclick="location.href='addForm.html'"
-                    th:onclick="|location.href='@{/chanMarket/item/add}'|"
-                    type="button">상품 등록</button>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col">
-            <button class="btn btn-primary float-end"
-                    th:if="${session.loginMember != null}"
-                    onclick="location.href='myInfo.html'"
-                    th:onclick="|location.href='@{/chanMarket/myInfo}'|"
-                    type="button">내 정보</button>
-        </div>
-    </div>
-
-    <form th:action="@{'/chanMarket/board'}" th:method="post">
-        <div class="col">
-            <button class="w-100 btn btn-primary btn-lg"
-                    th:if="${session.loginMember != null}"
-                    type="submit" value="Update">로그아웃
-            </button>
-        </div>
-    </form>
-</div>
-
-<form th:action="@{'/chanMarket/board'}" th:method="get">
-    <hr class="my-4">
-    <div>
-        <table class="table">
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th>상품명</th>
-                <th>가격</th>
-                <th>설명</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="board : ${boards}">
-                <td><a href="item.html" th:href="@{/chanMarket/board/{boardId}
-                                (boardId=${board.id})}" th:text="${board.id}"></a></td>
-                <td><a href="item.html" th:href="@{|/chanMarket/board/${board.id}|}"
-                       th:text="${board.getItem().getItemName()}"></a></td>
-                <td th:text="${board.getItem().getPrice()}"></td>
-                <td th:text="${board.getItem().getItemInformation()}"></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-</form>
-
-</body>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" th:if="${session.loginMember != null || session.googleLogin != null}" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">My Options</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/myInfo}">My Info</a></li>
+                                <li><hr class="dropdown-divider" /></li>
+                                <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/basket/{basketId}(basketId=${myInfo.basket.id})}">My Basket</a></li>
+                                <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/chat/{memberId}/ChatList(memberId=${myInfo.id})}">My Chat</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <button class="btn btn-outline-dark" th:if="${session.loginMember != null || session.googleLogin != null}"
+                                th:onclick="|location.href='@{/chanMarket/item/add}'|" type="button">
+                            <i class="bi-cart-fill me-1"></i>
+                            Sell Item
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <!-- Header-->
+        <header class="bg-dark py-5">
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="text-center text-white">
+                    <h1 class="display-4 fw-bolder">ChanMarket</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                </div>
+            </div>
+        </header>
+        <!-- Section-->
+        <section class="py-5">
+            <div class="container px-4 px-lg-5 mt-5">
+                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                    <form th:action="@{'/chanMarket/board'}" th:method="get">
+                        <tr th:each="board : ${boards}">
+                            <div class="col mb-5">
+                                <div class="card h-100">
+                                    <!-- Product image-->
+                                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                                    <!-- Product details-->
+                                    <div class="card-body p-4">
+                                        <div class="text-center">
+                                            <!-- Product name-->
+                                            <h5 class="fw-bolder">
+                                                <td><a th:href="@{|/chanMarket/board/${board.id}|}"
+                                                       th:text="${board.getItem().getItemName()}"></a></td>
+                                            </h5>
+                                            <!-- Product price-->
+                                            <td th:text="${board.getItem().getPrice()}"></td>
+                                        </div>
+                                    </div>
+                                    <!-- Product actions-->
+                                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                        <div class="text-center"><a class="btn btn-outline-dark mt-auto"
+                                        th:href="@{/chanMarket/board/{boardId}(boardId=${board.id})}">View</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </tr>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="/js/scripts.js"></script>
+    </body>
 </html>
