--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -1,46 +1,110 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>ChanMarket</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="/css/styles.css" rel="stylesheet" />
 </head>
 <body>
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" th:href="@{/chanMarket/board}">ChanMarket</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link active" th:if="${session.loginMember == null && session.googleLogin == null}" aria-current="page" th:href="@{/chanMarket/join}">Join</a></li>
+                <li class="nav-item"><a class="nav-link" th:if="${session.loginMember == null && session.googleLogin == null}" th:href="@{/chanMarket/login}">Login</a></li>
+                <li class="nav-item"><a class="nav-link" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/myInfo}">myInfo</a></li>
 
-나의 채팅방 목록
+                <form th:action="@{'/chanMarket/board'}" th:method="post">
+                    <li class="nav-item"><button class="nav-link" th:if="${session.loginMember != null || session.googleLogin != null}" type="submit">LogOut</button></li>
+                </form>
 
-<form th:action="@{'/chanMarket/chat/' + ${memberId} + '/ChatList'}" th:method="get">
-    <hr class="my-4">
-    <div>
-        <table class="table">
-            <thead>
-            <tr>
-                <th>물건</th>
-                <th>대화상대</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="myChat : ${myChatRooms}">
-                <td><a href="chatRoom.html" th:href="@{/chanMarket/board/{boardId}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" th:if="${session.loginMember != null || session.googleLogin != null}" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">My Options</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/myInfo}">My Info</a></li>
+                        <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/basket/{basketId}(basketId=${myInfo.basket.id})}">My Basket</a></li>
+                        <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/chat/{memberId}/ChatList(memberId=${myInfo.id})}">My Chat</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <button class="btn btn-outline-dark" th:if="${session.loginMember != null || session.googleLogin != null}"
+                        th:onclick="|location.href='@{/chanMarket/item/add}'|" type="button">
+                    <i class="bi-cart-fill me-1"></i>
+                    Sell Item
+                </button>
+            </form>
+        </div>
+    </div>
+</nav>
+<!-- Header-->
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">My ChatList</h1>
+            <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+        </div>
+    </div>
+</header>
+<!-- Section-->
+<section class="py-5">
+    <div class="container px-4 px-lg-5 mt-5">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            <form th:action="@{'/chanMarket/chat/' + ${memberId} + '/ChatList'}" th:method="get">
+                <hr class="my-4">
+                <div>
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>물건</th>
+                            <th>대화상대</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="myChat : ${myChatRooms}">
+                            <td><a href="chatRoom.html" th:href="@{/chanMarket/board/{boardId}
                                 (boardId=${myChat.board.id})}" th:text="${myChat.board.item.itemName}"></a></td>
 
-                <td th:if="${session.loginMember.equals(myChat.owner.email)}"
-                    th:text="${myChat.member.email}">
-                </td>
-                <td th:if="${session.loginMember.equals(myChat.member.email)}"
-                    th:text="${myChat.owner.email}">
-                </td>
-                <td><button th:onClick="|location.href='@{/chanMarket/chat/{roomId}(roomId=${myChat.id})}'|" type="button">채팅하기</button></td>
+                            <td th:if="${session.loginMember.equals(myChat.owner.email)}"
+                                th:text="${myChat.member.email}">
+                            </td>
+                            <td th:if="${session.loginMember.equals(myChat.member.email)}"
+                                th:text="${myChat.owner.email}">
+                            </td>
+                            <td><button th:onClick="|location.href='@{/chanMarket/chat/{roomId}(roomId=${myChat.id})}'|" type="button">채팅하기</button></td>
 
-                <td><button><a href="javascript:void(0);" class="btn btn-danger" th:onclick="'deleteChatRoom(' + ${myChat.id} +','+ ${memberId} + ')'">나가기</a></button></td>
-            </tr>
-            </tbody>
-        </table>
+                            <td><button><a href="javascript:void(0);" class="btn btn-danger" th:onclick="'deleteChatRoom(' + ${myChat.id} +','+ ${memberId} + ')'">나가기</a></button></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <br>
+                <a href="javascript:window.history.back();">뒤로가기</a>
+            </form>
+            </form>
+        </div>
     </div>
-    <br>
-    <a href="javascript:window.history.back();">뒤로가기</a>
-</form>
-
-
+</section>
+<!-- Footer-->
+<footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+</footer>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="/js/scripts.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="/js/chatDel.js"></script>
 </body>
