--- a/src/main/resources/templates/board/boardInfo.html
+++ b/src/main/resources/templates/board/boardInfo.html
@@ -1,115 +1,182 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>ChanMarket</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="/css/styles.css" rel="stylesheet" />
 </head>
 <body>
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" th:href="@{/chanMarket/board}">ChanMarket</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link active" th:if="${session.loginMember == null && session.googleLogin == null}" aria-current="page" th:href="@{/chanMarket/join}">Join</a></li>
+                <li class="nav-item"><a class="nav-link" th:if="${session.loginMember == null && session.googleLogin == null}" th:href="@{/chanMarket/login}">Login</a></li>
+                <li class="nav-item"><a class="nav-link" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/myInfo}">myInfo</a></li>
 
-<div class="container">
-    <div id="hello"></div>
-    <div class="py-5 text-center">
-        <h2>상품 상세</h2>
+                <form th:action="@{'/chanMarket/board'}" th:method="post">
+                    <li class="nav-item"><button class="nav-link" th:if="${session.loginMember != null || session.googleLogin != null}" type="submit">LogOut</button></li>
+                </form>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" th:if="${session.loginMember != null || session.googleLogin != null}" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">My Options</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/myInfo}">My Info</a></li>
+                        <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/basket/{basketId}(basketId=${myInfo.basket.id})}">My Basket</a></li>
+                        <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/chat/{memberId}/ChatList(memberId=${myInfo.id})}">My Chat</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <button class="btn btn-outline-dark" th:if="${session.loginMember != null || session.googleLogin != null}"
+                        th:onclick="|location.href='@{/chanMarket/item/add}'|" type="button">
+                    <i class="bi-cart-fill me-1"></i>
+                    Sell Item
+                </button>
+            </form>
+        </div>
     </div>
-    <!-- 추가 -->
-    <form>
-        <div>
-            조회수 : <td th:text="${board.countView}" readonly></td>회
+</nav>
+<!-- Header-->
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Item Info</h1>
+            <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
         </div>
-        <br>
-        <div>
-            <label for="email">판매자</label>
-            <input type="text" id="email" name="email" class="form-control"
-                   value="1" th:value="${board.getMember().getEmail()}" readonly>
-        </div>
-        <div>
-            <label for="itemName">상품명</label>
-            <input type="text" id="itemName" name="itemName" class="form-control"
-                   value="상품A" th:value="${board.getItem().getItemName()}" readonly>
-        </div>
-        <div>
-            <label for="price">가격</label>
-            <input type="text" id="price" name="price" class="form-control"
-                   value="10000" th:value="${board.getItem().getPrice()}" readonly>
-        </div>
-        <div>
-            <label for="itemInformation">제품 설명</label>
-            <input type="text" id="itemInformation" name="itemInformation" class="form-control"
-                   value="10" th:value="${board.getItem().getItemInformation()}" readonly>
-            <hr class="my-4">
-
-            <div class="col">
-                <button class="w-100 btn btn-primary btn-lg"
-                        onclick="location.href='editForm.html'"
-                        th:onclick="|location.href='@{/chanMarket/item/{itemId}/edit(itemId=${board.item.id})}'|" type="button">상품 수정</button>
-            </div>
-
-            <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='itemBasket.html'"
-                        th:onclick="|location.href='@{/chanMarket/basket/{itemId}/add(itemId=${board.item.id})}'|"
-                        type="button">찜하기</button>
-            </div>
-
-            <div class="row">
-                <button><a href="javascript:void(0);" class="btn btn-danger" th:onclick="'deleteConfirm(' + ${board.id} + ')'">삭제</a></button>
-            </div>
-
-            <div class="col">
-                <button class="w-100 btn btn-primary btn-lg"
-                        onclick="location.href='../chat/createForm.html'"
-                        th:onclick="|location.href='@{/chanMarket/chat/{boardId}/ChatCreate(boardId=${board.id})}'|" type="button">채팅 하기</button>
-            </div>
-
-            <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='boardList.html'"
-                        th:onclick="|location.href='@{/chanMarket/board}'|"
-                        type="button">목록으로</button>
-            </div>
-
-        </div>
-    </form>
-</div>
-
-<br>
-<br>
-
-
-<h1>댓글</h1>
-
-<form th:action="@{'/chanMarket/board/' + ${board.id}}" th:method="post">
-    <textarea id="text" name="text" cols="40" rows="5"></textarea>
-    <br>
-    <input type="submit" value="작성">
-    <input type="reset" value="취소">
-</form>
-
-
-<hr class="my-4">
-<form>
-    <div class="card">
-        <tr th:each="comments : ${board.getCommentList()}">
-            <div class="card-header">
-                <td th:text="${comments.member.email}"></td>
-                <td th:text="${comments.nowTime}"></td>
-            </div>
-            <div class="card-body">
-                <td th:text="${comments.text}"></td>
-            </div>
-
-            <button class="w-100 btn btn-secondary btn-lg"
-                    th:onclick="|location.href='@{/chanMarket/board/{commentId}/commentEdit(commentId=${comments.id})}'|"
-                    type="button">수정</button>
-
-            <button><a href="javascript:void(0);" class="btn btn-danger" th:onclick="'deleteComment(' + ${comments.getBoard().getId()} +','+ ${comments.id} + ')'">삭제</a></button>
-
-        </tr>
     </div>
-</form>
+</header>
+<!-- Section-->
 
+<section class="py-5">
+    <div class="container px-4 px-lg-5 mt-5">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            <form th:action="@{'/chanMarket/baord/{boardId}(boardId=${board.id})'}" th:method="get">
+                <div>
+                    조회수 : <td th:text="${board.countView}" readonly></td>회
+                </div>
+                <br>
+                <div>
+                    <label for="email">판매자</label>
+                    <input type="text" id="email" name="email" class="form-control"
+                           th:value="${board.getMember().getEmail()}" readonly>
+                </div>
+                <div>
+                    <label for="itemName">상품명</label>
+                    <input type="text" id="itemName" name="itemName" class="form-control"
+                           value="상품A" th:value="${board.getItem().getItemName()}" readonly>
+                </div>
+                <div>
+                    <label for="price">가격</label>
+                    <input type="text" id="price" name="price" class="form-control"
+                           value="10000" th:value="${board.getItem().getPrice()}" readonly>
+                </div>
+                <div>
+                    <label for="itemInformation">제품 설명</label>
+                    <input type="text" id="itemInformation" name="itemInformation" class="form-control"
+                           value="10" th:value="${board.getItem().getItemInformation()}" readonly>
+                </div>
+                <br>
+                <div>
+                    <div class="col">
+                        <button class="w-100 btn btn-primary btn-lg"
+                                onclick="location.href='editForm.html'"
+                                th:onclick="|location.href='@{/chanMarket/item/{itemId}/edit(itemId=${board.item.id})}'|" type="button">상품 수정</button>
+                    </div>
+
+                    <div class="col">
+                        <button class="w-100 btn btn-secondary btn-lg"
+                                onclick="location.href='itemBasket.html'"
+                                th:onclick="|location.href='@{/chanMarket/basket/{itemId}/add(itemId=${board.item.id})}'|"
+                                type="button">찜하기</button>
+                    </div>
+
+                    <div class="col">
+                            <a href="javascript:void(0);" class="w-100 btn btn-primary btn-lg" th:onclick="'deleteConfirm(' + ${board.id} + ')'">삭제</a>
+                    </div>
+
+                    <div class="col">
+                        <button class="w-100 btn btn-secondary btn-lg"
+                                onclick="location.href='../chat/createForm.html'"
+                                th:onclick="|location.href='@{/chanMarket/chat/{boardId}/ChatCreate(boardId=${board.id})}'|" type="button">채팅 하기</button>
+                    </div>
+
+                    <div class="col">
+                        <button class="w-100 btn btn-primary btn-lg"
+                                onclick="location.href='boardList.html'"
+                                th:onclick="|location.href='@{/chanMarket/board}'|"
+                                type="button">목록으로</button>
+                    </div>
+                </div>
+            </form>
+
+            <div class="container px-4 px-lg-5 mt-5" style="float: right">
+                <label>댓글</label>
+                    <form th:action="@{'/chanMarket/board/' + ${board.id}}" th:method="post">
+                        <textarea id="text" name="text" cols="40" rows="5"></textarea>
+                        <br>
+                        <input type="submit" value="작성">
+                        <input type="reset" value="취소">
+                    </form>
+                    <br>
+                    <form>
+                        <div class="card" style="width: 320px">
+                            <tr th:each="comments : ${board.getCommentList()}">
+                                <div class="card-header">
+                                    <td th:text="${comments.member.email}"></td>
+                                    <td th:text="${comments.nowTime}"></td>
+                                </div>
+                                <div class="card-body">
+                                    <td th:text="${comments.text}"></td>
+                                </div>
+                                <!--
+                                <button class="w-100 btn btn-primary btn-lg" th:onclick="|location.href='@{/chanMarket/board/{commentId}/commentEdit(commentId=${comments.id})}'|"
+                                        type="button">수정</button>
+                                -->
+                                <a href="javascript:void(0);" class="btn btn-danger" th:onclick="'deleteComment(' + ${comments.getBoard().getId()} +','+ ${comments.id} + ')'">삭제</a>
+                            </tr>
+                        </div>
+                    </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+<!-- Footer-->
+<footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+</footer>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="/js/scripts.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="/js/boardDel.js"> </script>
 <script type="text/javascript" src="/js/comment.js"> </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
