--- a/src/main/resources/templates/item/addForm.html
+++ b/src/main/resources/templates/item/addForm.html
@@ -1,58 +1,117 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <link href="../../static/css/bootstrap.min.css"
-          th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
-    <style>
-        .container {
-            max-width: 560px;
-        }
-    </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>ChanMarket</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="/css/styles.css" rel="stylesheet" />
 </head>
 <body>
-<div class="container">
-    <div class="py-5 text-center">
-        <h2>상품 등록 폼</h2>
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" th:href="@{/chanMarket/board}">ChanMarket</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link active" th:if="${session.loginMember == null && session.googleLogin == null}" aria-current="page" th:href="@{/chanMarket/join}">Join</a></li>
+                <li class="nav-item"><a class="nav-link" th:if="${session.loginMember == null && session.googleLogin == null}" th:href="@{/chanMarket/login}">Login</a></li>
+                <li class="nav-item"><a class="nav-link" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/myInfo}">myInfo</a></li>
+
+                <form th:action="@{'/chanMarket/board'}" th:method="post">
+                    <li class="nav-item"><button class="nav-link" th:if="${session.loginMember != null || session.googleLogin != null}" type="submit">LogOut</button></li>
+                </form>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" th:if="${session.loginMember != null || session.googleLogin != null}" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">My Options</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/myInfo}">My Info</a></li>
+                        <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/basket/{basketId}(basketId=${myInfo.basket.id})}">My Basket</a></li>
+                        <li><a class="dropdown-item" th:if="${session.loginMember != null || session.googleLogin != null}" th:href="@{/chanMarket/chat/{memberId}/ChatList(memberId=${myInfo.id})}">My Chat</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <button class="btn btn-outline-dark" th:if="${session.loginMember != null || session.googleLogin != null}"
+                        th:onclick="|location.href='@{/chanMarket/item/add}'|" type="button">
+                    <i class="bi-cart-fill me-1"></i>
+                    Sell Item
+                </button>
+            </form>
+        </div>
     </div>
-    <h4 class="mb-3">상품 입력</h4>
-    <form th:action="@{'/chanMarket/item'}" th:method="post">
-        <div>
-            <label>등록한 이메일</label>
-            <input type="text" id="email" name="email" th:value="${email}" class="form-control"
-                   readonly>
+</nav>
+<!-- Header-->
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">addForm</h1>
+            <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
         </div>
-        <div>
-            <label for="itemName">상품명</label>
-            <input type="text" id="itemName" name="itemName" class="form-control"
-                   placeholder="이름을 입력하세요">
+    </div>
+</header>
+<!-- Section-->
+<section class="py-5">
+    <div class="container px-4 px-lg-5 mt-5">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            <form th:action="@{'/chanMarket/item'}" th:method="post">
+
+                <div>
+                    <label for="email">등록하는 이메일</label>
+                    <input type="text" id="email" name="email" class="form-control"
+                           th:value="${myInfo.getEmail()}" readonly>
+                </div>
+                <div>
+                    <label for="itemName">상품명</label>
+                    <input type="text" id="itemName" name="itemName" class="form-control"
+                           placeholder="이름을 입력하세요">
+                </div>
+                <div>
+                    <label for="price">가격</label>
+                    <input type="text" id="price" name="price" class="form-control"
+                           placeholder="가격을 입력하세요">
+                </div>
+                <hr class="my-4">
+                <div>
+                    <label for="itemInformation">설명</label>
+                    <textarea type="text" id="itemInformation" name="itemInformation" class="form-control"
+                           maxlength="255" style="vertical-align:top; width: 270px; height: 100px;"
+                              placeholder="설명을 입력하세요"></textarea>
+                </div>
+
+                <br>
+
+                    <div class="col">
+                        <button class="w-100 btn btn-secondary btn-lg" type="submit">상품 등록</button>
+                    <br>
+                        <button class="w-100 btn btn-secondary btn-lg"
+                                th:onclick="|location.href='@{/chanMarket/board}'|"
+                                type="button">취소</button>
+                    </div>
+
+            </form>
         </div>
-        <div>
-            <label for="price">가격</label>
-            <input type="text" id="price" name="price" class="form-control"
-                   placeholder="가격을 입력하세요">
-        </div>
-        <hr class="my-4">
-        <div>
-            <label for="itemInformation">설명</label>
-            <input type="text" id="itemInformation" name="itemInformation" class="form-control"
-                   maxlength="255" style="vertical-align:top; width: 200px; height: 100px;"
-                   placeholder="설명을 입력하세요">
-        </div>
-        <hr class="my-4">
-        <div class="row">
-            <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">상품
-                    등록</button>
-            </div>
-            <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='itemList.html'"
-                        th:onclick="|location.href='@{/chanMarket/board}'|"
-                        type="button">취소</button>
-            </div>
-        </div>
-    </form>
-</div> <!-- /container -->
+    </div>
+</section>
+<!-- Footer-->
+<footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+</footer>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="/js/scripts.js"></script>
 </body>
 </html>
+
+
+
+
