--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -85,7 +85,7 @@
 <!-- Section-->
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
-        <form th:action="@{'/chanMarket/board'}" th:method="get" class="chan">
+        <form th:action="@{'/chanMarket/board'}" th:method="get" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <tr th:each="board : ${boards}">
                 <div class="col mb-5 chan1">
                     <div class="card h-100">
