--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -667,12 +667,14 @@ progress {
 }
 
 .chan {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+
 }
 
 .chan1 {
+  float: left;
+  height: 400px;
+  width: 300px;
+
   margin: 10px;
   padding: 20px;
 }
